name:                  haskoin
version:               0.2.0
synopsis:              
    Implementation of the Bitcoin protocol.
description:
    Haskoin is a package implementing the Bitcoin protocol specifications. It
    is written in pure Haskell and the library is implemented mostly with pure
    functions (no IO monad). It provides the following features:
    .
    * ECDSA cryptographic primitives (secp256k1)
    * Hashing functions (sha-256, ripemd-160)
    * Base58 encoding
    * BIP32 extended key derivations
    * BIP39 mnemonic key
    * Script parsing and evaluation
    * Building and signing of standard transactions (regular, multisig, p2sh)
    * Deterministic signing (rfc-6979)
    * Network protocol type parsing
    * Headerchain implementation (Blockchain with headers only)
    * Bloom filters and partial merkle tree library
    * Headers-first SPV node implementation (network-only, no wallet)
    * JSON-RPC/Stratum client library
    .
    A wallet implementation using the SPV node library is available in the
    haskoin-wallet package.
homepage:              http://github.com/haskoin/haskoin
bug-reports:           http://github.com/haskoin/haskoin/issues
stability:             stable
license:               PublicDomain
license-file:          UNLICENSE
author:                Philippe Laprade, Jean-Pierre Rupp
maintainer:            plaprade+hackage@gmail.com
category:              Bitcoin, Finance, Network
build-type:            Simple
cabal-version:         >= 1.9.2
extra-source-files:    tests/data/*.json,
                       testnet/Network/Haskoin/Constants.hs,
                       prodnet/Network/Haskoin/Constants.hs

source-repository head
    type:     git
    location: git://github.com/haskoin/haskoin.git

Flag Testnet
    Description: Compile the library against Testnet instead of Prodnet
    Default:     False

library
    exposed-modules: Network.Haskoin.Util
                     Network.Haskoin.Stratum
                     Network.Haskoin.Crypto
                     Network.Haskoin.Node
                     Network.Haskoin.Script
                     Network.Haskoin.Transaction
                     Network.Haskoin.Block
                     Network.Haskoin.Constants
                     Network.Haskoin.Test
                     Network.Haskoin.Internals

    other-modules: Network.Haskoin.Crypto.NumberTheory 
                   Network.Haskoin.Crypto.Curve 
                   Network.Haskoin.Crypto.Hash 
                   Network.Haskoin.Crypto.BigWord
                   Network.Haskoin.Crypto.Point
                   Network.Haskoin.Crypto.Base58
                   Network.Haskoin.Crypto.Keys
                   Network.Haskoin.Crypto.ExtendedKeys
                   Network.Haskoin.Crypto.NormalizedKeys
                   Network.Haskoin.Crypto.ECDSA
                   Network.Haskoin.Crypto.Mnemonic
                   Network.Haskoin.Node.Types
                   Network.Haskoin.Node.Message
                   Network.Haskoin.Node.Bloom
                   Network.Haskoin.Node.Peer
                   Network.Haskoin.Node.PeerManager
                   Network.Haskoin.Node.SPVNode
                   Network.Haskoin.Script.Types 
                   Network.Haskoin.Script.Parser 
                   Network.Haskoin.Script.SigHash
                   Network.Haskoin.Script.Evaluator
                   Network.Haskoin.Transaction.Types
                   Network.Haskoin.Transaction.Builder
                   Network.Haskoin.Block.Types
                   Network.Haskoin.Block.Merkle
                   Network.Haskoin.Block.HeaderChain
                   Network.Haskoin.Block.Checkpoints
                   Network.Haskoin.Test.Util
                   Network.Haskoin.Test.Crypto
                   Network.Haskoin.Test.Node
                   Network.Haskoin.Test.Message
                   Network.Haskoin.Test.Script
                   Network.Haskoin.Test.Transaction
                   Network.Haskoin.Test.Block
                   Network.Haskoin.Test.Stratum

    extensions: EmptyDataDecls
                OverloadedStrings
                FlexibleInstances
                FlexibleContexts
                DeriveDataTypeable
                MultiParamTypeClasses
                KindSignatures
                FunctionalDependencies
                RecordWildCards

    build-depends: aeson                    >= 0.7          && < 0.9
                 , async                    >= 2.0          && < 2.1
                 , base                     >= 4.6          && < 5 
                 , binary                   >= 0.7          && < 0.8 
                 , byteable                 >= 0.1          && < 0.2
                 , bytestring               >= 0.10         && < 0.11 
                 , base16-bytestring        >= 0.1          && < 0.2
                 , conduit                  >= 1.2          && < 1.3
                 , conduit-extra            >= 1.1          && < 1.2
                 , containers               >= 0.5          && < 0.6
                 , cryptohash               >= 0.11         && < 0.12
                 , deepseq                  >= 1.3          && < 1.4
                 , data-default             >= 0.5          && < 0.6
                 , either                   >= 4.3          && < 4.4
                 , json-rpc                 >= 0.2.0.1      && < 0.3
                 , leveldb-haskell          >= 0.6          && < 0.7
                 , monad-control            >= 0.3          && < 1.1
                 , monad-logger             >= 0.3          && < 0.4
                 , mtl                      >= 2.1          && < 2.3 
                 , network                  >= 2.4          && < 2.7
                 , pbkdf                    >= 1.1          && < 1.2
                 , QuickCheck               >= 2.6          && < 2.8
                 , random                   >= 1.0          && < 1.2
                 , resourcet                >= 1.1          && < 1.2
                 , split                    >= 0.2          && < 0.3
                 , stm                      >= 2.4          && < 2.5
                 , stm-conduit              >= 2.5          && < 2.6
                 , text                     >= 0.11         && < 1.3
                 , time                     >= 1.4          && < 1.5

    ghc-options:       -Wall 

  if flag(testnet)
    hs-source-dirs: . testnet
  else
    hs-source-dirs: . prodnet

test-suite test-haskoin
    type:              exitcode-stdio-1.0
    main-is:           Main.hs

    extensions: EmptyDataDecls

    other-modules: Network.Haskoin.Util.Tests
                   Network.Haskoin.Crypto.BigWord.Tests
                   Network.Haskoin.Crypto.Point.Tests
                   Network.Haskoin.Crypto.ECDSA.Tests
                   Network.Haskoin.Crypto.Base58.Tests
                   Network.Haskoin.Crypto.Base58.Units
                   Network.Haskoin.Crypto.Keys.Tests
                   Network.Haskoin.Crypto.ExtendedKeys.Tests
                   Network.Haskoin.Crypto.ExtendedKeys.Units
                   Network.Haskoin.Crypto.Hash.Tests
                   Network.Haskoin.Crypto.Hash.Units
                   Network.Haskoin.Crypto.Mnemonic.Tests
                   Network.Haskoin.Crypto.Mnemonic.Units
                   Network.Haskoin.Crypto.Units
                   Network.Haskoin.Node.Units
                   Network.Haskoin.Script.Tests
                   Network.Haskoin.Script.Units
                   Network.Haskoin.Transaction.Tests
                   Network.Haskoin.Transaction.Units
                   Network.Haskoin.Block.Tests
                   Network.Haskoin.Block.Units
                   Network.Haskoin.Stratum.Tests
                   Network.Haskoin.Stratum.Units
                   Network.Haskoin.Json.Tests
                   Network.Haskoin.Binary.Tests

    build-depends: aeson                          >= 0.7        && < 0.9
                 , base                           >= 4.6        && < 5 
                 , binary                         >= 0.7        && < 0.8 
                 , bytestring                     >= 0.10       && < 0.11 
                 , containers                     >= 0.5        && < 0.6
                 , haskoin
                 , json-rpc                       >= 0.2.0.1    && < 0.3
                 , mtl                            >= 2.1        && < 2.3 
                 , split                          >= 0.2        && < 0.3
                 , HUnit                          >= 1.2        && < 1.3
                 , QuickCheck                     >= 2.6        && < 2.8
                 , test-framework                 >= 0.8        && < 0.9 
                 , test-framework-quickcheck2     >= 0.3        && < 0.4 
                 , test-framework-hunit           >= 0.3        && < 0.4 

    ghc-options: -Wall 
    hs-source-dirs: tests

