name:                   jsonrpc-data
version:                0.1.0.0
synopsis:               Transport-agnostic JSONRPC messages
homepage:               http://github.com/Xeno-Genesis/jsonrpc-data
license:                PublicDomain
license-file:           UNLICENSE
author:                 Jean-Pierre Rupp
maintainer:             root@xeno-genesis.com
category:               Data
build-type:             Simple
cabal-version:          >=1.8

library
    exposed-modules:    Data.JSONRPC.Message
    -- other-modules:        
    build-depends:      base == 4.6.*,
                        text,
                        vector,
                        unordered-containers,
                        aeson,
                        attoparsec

Test-Suite test-jsonpc-data
    type:               exitcode-stdio-1.0
    main-is:            test-jsonrpc-data.hs
    build-depends:      base == 4.6.*,
                        aeson,
                        attoparsec,
                        bytestring,
                        HUnit,
                        text,
                        unordered-containers,
                        vector
