name:                  haskoin-node
version:               0.2.0
synopsis:
    Implementation of a Bitoin node.
description:
    haskoin-node provides an implementation of the Bitcoin network protocol
    that allows you to synchronize headers (with SPV validation) and download
    merkle blocks and full blocks. This package can be used to implement
    wallets or other Bitcoin components that require talking to the Bitcoin
    network. It provides the following features:
    .
    * Implementation of the Bitcoin network protocol
    * Headertree implementation with SPV verification
    * Headers-first synchronization
    * Merkle block download from peers with bloom filters
    * Full block download from peers
    .
    A wallet implementation using this package is available in haskoin-wallet.

homepage:              http://github.com/haskoin/haskoin
bug-reports:           http://github.com/haskoin/haskoin/issues
stability:             stable
license:               PublicDomain
license-file:          UNLICENSE
author:                Philippe Laprade, Jean-Pierre Rupp
maintainer:            plaprade+hackage@gmail.com
category:              Bitcoin, Finance, Network
build-type:            Simple
cabal-version:         >= 1.9.2
extra-source-files:    stack.yaml

source-repository head
    type:     git
    location: git://github.com/haskoin/haskoin.git

library
    exposed-modules: Network.Haskoin.Node.HeaderTree
                     Network.Haskoin.Node.Checkpoints
                     Network.Haskoin.Node.Peer
                     Network.Haskoin.Node.BlockChain
                     Network.Haskoin.Node.STM

    extensions: OverloadedStrings
                FlexibleInstances
                FlexibleContexts
                RecordWildCards
                DeriveDataTypeable

    build-depends: aeson                    >= 0.7          && < 0.9
                 , async                    >= 2.0          && < 2.1
                 , base                     >= 4.8          && < 5
                 , binary                   >= 0.7          && < 0.8
                 , bytestring               >= 0.10         && < 0.11
                 , concurrent-extra         >= 0.7          && < 0.8
                 , conduit                  >= 1.2          && < 1.3
                 , conduit-extra            >= 1.1          && < 1.2
                 , containers               >= 0.5          && < 0.6
                 , data-default             >= 0.5          && < 0.6
                 , deepseq                  >= 1.4          && < 1.5
                 , either                   >= 4.3          && < 4.5
                 , exceptions               >= 0.8          && < 0.9
                 , haskoin-core             >= 0.2          && < 0.3
                 , leveldb-haskell          >= 0.6          && < 0.7
                 , lifted-async             >= 0.2          && < 0.8
                 , lifted-base              >= 0.2          && < 0.3
                 , monad-control            >= 1.0          && < 1.1
                 , monad-logger             >= 0.3          && < 0.4
                 , mtl                      >= 2.2          && < 2.3
                 , network                  >= 2.4          && < 2.7
                 , random                   >= 1.0          && < 1.2
                 , stm                      >= 2.4          && < 2.5
                 , stm-chans                >= 3.0          && < 3.1
                 , stm-conduit              >= 2.5          && < 2.7
                 , string-conversions       >= 0.4          && < 0.5
                 , text                     >= 0.11         && < 1.3
                 , time                     >= 1.4          && < 1.6

    ghc-options:       -Wall

test-suite test-haskoin-node
    type:              exitcode-stdio-1.0
    main-is:           Main.hs

    extensions: EmptyDataDecls

    other-modules: Network.Haskoin.Node.Tests
                   Network.Haskoin.Node.Units

    build-depends: base                           >= 4.8        && < 5
                 , haskoin-node
                 , HUnit                          >= 1.2        && < 1.3
                 , QuickCheck                     >= 2.6        && < 2.9
                 , test-framework                 >= 0.8        && < 0.9
                 , test-framework-quickcheck2     >= 0.3        && < 0.4
                 , test-framework-hunit           >= 0.3        && < 0.4

    ghc-options: -Wall
    hs-source-dirs: tests

