name:                  haskoin-node
version:               0.4.0
synopsis:
    Implementation of a Bitoin node.
description:
    haskoin-node provides an implementation of the Bitcoin network protocol
    that allows you to synchronize headers (with SPV validation) and download
    merkle blocks and full blocks. This package can be used to implement
    wallets or other Bitcoin components that require talking to the Bitcoin
    network. It provides the following features:
    .
    * Implementation of the Bitcoin network protocol
    * Headertree implementation with SPV verification
    * Headers-first synchronization
    * Merkle block download from peers with bloom filters
    * Full block download from peers
    .
    A wallet implementation using this package is available in haskoin-wallet.

homepage:              http://github.com/haskoin/haskoin
bug-reports:           http://github.com/haskoin/haskoin/issues
tested-with:           GHC==7.10.3, GHC==7.10.2, GHC==7.10.1
stability:             stable
license:               PublicDomain
license-file:          UNLICENSE
author:                Philippe Laprade, Jean-Pierre Rupp
maintainer:            plaprade+hackage@gmail.com
category:              Bitcoin, Finance, Network
build-type:            Simple
cabal-version:         >= 1.9.2

source-repository head
    type:     git
    location: git://github.com/haskoin/haskoin.git

library
    exposed-modules: Network.Haskoin.Node.HeaderTree
                     Network.Haskoin.Node.Checkpoints
                     Network.Haskoin.Node.Peer
                     Network.Haskoin.Node.BlockChain
                     Network.Haskoin.Node.STM
    other-modules:   Network.Haskoin.Node.HeaderTree.Types
                     Network.Haskoin.Node.HeaderTree.Model

    extensions: OverloadedStrings
                FlexibleInstances
                FlexibleContexts
                RecordWildCards
                DeriveDataTypeable

    build-depends: aeson                    >= 0.7          && < 0.12
                 , async                    >= 2.0          && < 2.2
                 , base                     >= 4.8          && < 5
                 , bytestring               >= 0.10         && < 0.11
                 , concurrent-extra         >= 0.7          && < 0.8
                 , cereal                   >= 0.5          && < 0.6
                 , conduit                  >= 1.2          && < 1.3
                 , conduit-extra            >= 1.1          && < 1.2
                 , containers               >= 0.5          && < 0.6
                 , data-default             >= 0.5          && < 0.6
                 , deepseq                  >= 1.4          && < 1.5
                 , either                   >= 4.3          && < 4.5
                 , esqueleto                >= 2.4          && < 2.5
                 , exceptions               >= 0.8          && < 0.9
                 , haskoin-core             >= 0.3          && < 0.5
                 , largeword                >= 1.2.4        && < 1.3
                 , lifted-async             >= 0.2          && < 0.10
                 , lifted-base              >= 0.2          && < 0.3
                 , monad-control            >= 1.0          && < 1.1
                 , monad-logger             >= 0.3          && < 0.4
                 , mtl                      >= 2.2          && < 2.3
                 , network                  >= 2.4          && < 2.7
                 , persistent               >= 2.2          && < 2.3
                 , persistent-template      >= 2.1          && < 2.2
                 , resource-pool            >= 0.2          && < 0.3
                 , random                   >= 1.0          && < 1.2
                 , stm                      >= 2.4          && < 2.5
                 , stm-chans                >= 3.0          && < 3.1
                 , stm-conduit              >= 2.5          && < 2.9
                 , string-conversions       >= 0.4          && < 0.5
                 , text                     >= 0.11         && < 1.3
                 , time                     >= 1.4          && < 1.7

    ghc-options: -Wall

test-suite test-haskoin-node
    type:              exitcode-stdio-1.0
    main-is:           Main.hs

    extensions: EmptyDataDecls

    other-modules: Network.Haskoin.Node.Tests
                   Network.Haskoin.Node.Units

    build-depends: base                           >= 4.8        && < 5
                 , haskoin-core
                 , haskoin-node
                 , HUnit                          >= 1.2        && < 1.4
                 , QuickCheck                     >= 2.6        && < 2.9
                 , monad-logger                   >= 0.3        && < 0.4
                 , mtl                            >= 2.2        && < 2.3
                 , persistent                     >= 2.2        && < 2.3
                 , persistent-sqlite              >= 2.2        && < 2.3
                 , resourcet                      >= 1.1        && < 1.2
                 , test-framework                 >= 0.8        && < 0.9
                 , test-framework-quickcheck2     >= 0.3        && < 0.4
                 , test-framework-hunit           >= 0.3        && < 0.4

    ghc-options: -Wall
    hs-source-dirs: tests
